updated some styles on component details and fixed white space issue

--- a/src/style/portfolio-detail.scss
+++ b/src/style/portfolio-detail.scss
@@ -38,6 +38,8 @@
 
         .details {
             font-size: 1.5em;
+            white-space: pre-wrap;
+            text-align: center;
         }
 
         .visiting {
@@ -46,10 +48,21 @@
             align-items: center;
             height: 100px;
             text-transform: uppercase;
-            font-size: 1.2em;
+            font-family: 'KoHo', sans-serif;
+            font-size: 1.7em;
+            font-weight: 700;
+            transition: .2s;
             
             a {
                 text-decoration: none;
+            }
+
+            .category {
+                color: $dark-teal;
+            }
+
+            &:hover {
+                text-shadow: 0px 1px 2px #aa0b62fb;
             }
         }
     }
